--- a/index.html
+++ b/index.html
@@ -1,80 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Языки программирования</title>
-    <link rel="stylesheet" href="styles/app.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile Cards</title>
+  <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
-    <h1>Языки программирования</h1>
-    <table>
-      <tr>
-        <th>Язык программирования</th>
-        <th>Год создания</th>
-        <th>Парадигма</th>
-        <th>Применение</th>
-      </tr>
-      <tr>
-        <td>C</td>
-        <td>1972</td>
-        <td>Структурное, императивное</td>
-        <td>Системное программирование, разработка игр, встраиваемые системы</td>
-      </tr>
-      <tr>
-        <td>C++</td>
-        <td>1985</td>
-        <td>Расширенное C, объектно-ориентированное</td>
-        <td>Системное программирование, разработка игр, высокопроизводительные приложения</td>
-      </tr>
-      <tr>
-        <td>Java</td>
-        <td>1995</td>
-        <td>Объектно-ориентированное, императивное</td>
-        <td>Разработка веб-приложений, мобильных приложений, настольных приложений</td>
-      </tr>
-      <tr>
-        <td>Python</td>
-        <td>1991</td>
-        <td>Интерпретируемое, императивное, объектно-ориентированное</td>
-        <td>Разработка веб-приложений, машинное обучение, научные вычисления, автоматизация</td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-        <td>1995</td>
-        <td>Интерпретируемое, функциональное</td>
-        <td>Разработка веб-приложений, создание интерактивных элементов на страницах</td>
-      </tr>
-      <tr>
-        <td>PHP</td>
-        <td>1995</td>
-        <td>Серверное, императивное, объектно-ориентированное</td>
-        <td>Разработка веб-сайтов, динамических веб-приложений</td>
-      </tr>
-      <tr>
-        <td>C#</td>
-        <td>2000</td>
-        <td>Объектно-ориентированное, императивное</td>
-        <td>Разработка игр, веб-приложений, настольных приложений, мобильных приложений</td>
-      </tr>
-      <tr>
-        <td>Go</td>
-        <td>2009</td>
-        <td>Компилируемое, императивное</td>
-        <td>Системное программирование, разработка веб-приложений, сетевые приложения</td>
-      </tr>
-      <tr>
-        <td>Swift</td>
-        <td>2014</td>
-        <td>Объектно-ориентированное, функциональное</td>
-        <td>Разработка iOS-приложений, macOS-приложений</td>
-      </tr>
-      <tr>
-        <td>Kotlin</td>
-        <td>2011</td>
-        <td>Статически типизированное, объектно-ориентированное, функциональное</td>
-        <td>Разработка Android-приложений, кроссплатформенных приложений</td>
-      </tr>
-    </table>
+  <div>
+    <img src="/assets/profile1.png" alt="Photo1">
+    <h2>Иван Иванов</h2>
+    <h3>Ведущий разработчик</h3>
+    <p>Иван имеет более 10 лет опыта в разработке программного обеспечения и является экспертом в области веб-технологий.</p>
+  </div>
+  <div>
+    <img src="/assets/profile2.png" alt="Photo2">
+    <h2>Анна Смирнова</h2>
+    <h3>Дизайнер UI/UX</h3>
+    <p>Анна занимается дизайном интерфейсов уже 5 лет и создает интуитивно понятные и красивые пользовательские интерфейсы.</p>
+  </div>
+  <div>
+    <img src="/assets/profile3.png" alt="Photo3">
+    <h2>Петр Сидоров</h2>
+    <h3>Менеджер проектов</h3>
+    <p>Петр успешно руководит проектами в сфере IT более 7 лет, обеспечивая выполнение сроков и высокое качество работ.</p>
+  </div>
 </body>
 </html>
